<resources>
    <string name="app_name">Список задач</string>
    <string name="enter_email">Введите email</string>
    <string name="enter_password">Введите пароль</string>
    <string name="btn_login">Вход</string>
    <string name="btn_registration">Регистрация</string>
    <string name="btn_confirm">подтвердить</string>
    <string name="btn_cancel">отмена</string>
    <string name="edit_password_repeat">Повторите пароль</string>
    <string name="success">Добро пожаловать!</string>
    <string name="authentication_failed">Неправельный логин или пароль!</string>
    <string name="registration_failed">Такой email уже существует</string>
    <string name="auth_label">Авторизация</string>
    <string name="reg_label">Регистрация</string>
    <string name="good_reg">Успешная регистрация</string>
    <string name="feed_label">Лента с постами</string>
    <string name="error_password_not_same">Пароль должен быть из латинских букв, не короче 6 символов и иметь хотябы одну заглавную букву.</string>
    <string name="error_password_not_same_2">Пароли должны быть синхронны!!!.</string>
    <string name="titlePD">Информация</string>
    <string name="messagePD">Соединение с сервером...</string>
    <string name="log_out">Log Out</string>
    <string name="error_download_posts">Постов нет.</string>
    <string name="create_task_title">Заголовок</string>
    <string name="my_task">Моя задача</string>
    <string name="new_task">Создать задачу</string>
    <string name="update_task">Обновить задачу</string>
    <string name="title_feed_activity">Список задач</string>
    <string name="error_create_task_empty">Заполните все поля</string>
    <string name="task_created_successfully">Задача создана</string>
    <string name="task_updated_successfully">Задача обновлена</string>
    <string name="error_connect">Ошибка соединения</string>
    <string name="warning">Внимание !!!</string>
    <string name="question_for_delete_task">Вы действительно хотите удалить эту задачу?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="canceled">Отменено</string>
    <string name="deleted">Удалено</string>
    <string name="error_email_not_same">Введите корректный email</string>


</resources>