<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:theme="@style/Theme.MyToDoList"
    tools:context=".CreateTaskActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_task_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/create_task_title"
        app:layout_constraintBottom_toTopOf="@+id/create_task_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_crTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:inputType="text"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="22sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_task_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/my_task"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintBottom_toTopOf="@id/btn_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_task_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_crContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:padding="8dp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/btn_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_new_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_task"
            android:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_update_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_task"
            android:visibility="gone" />
    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>